# polimatch

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: na22.csv
src/config/: config.example.json  setting.py
src/search/: base_searcher.py  daum_searcher.py  google_searcher.py  naver_searcher.py
src/verification/: batch_processor.py  face_verifier.py
tests/: conftest.py  test_batch_processor.py  test_setting.py
