[project]
name = "polimatch"
version = "0.1.0"
description = ""
authors = [
    {name = "Jeesang Kim",email = "jeenowden@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepface (>=0.0.96,<0.0.97)",
    "tf-keras (>=2.20.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
